--- a/zadatak1/prvi.css
+++ b/zadatak1/prvi.css
@@ -11,35 +11,35 @@ li{
 }
 
 li:nth-of-type(1){
-    background-image: url("en-GB.png");
+    background-image: url("slike/en-GB.png");
     background-repeat: no-repeat;
     background-position: 5px center;
     background-color: rgba(0, 255, 0, 0.75);
 }
 
 li:nth-of-type(2){
-    background-image: url("es.png");
+    background-image: url("slike/es.png");
     background-repeat: no-repeat;
     background-position: 5px center;
     background-color: rgba(0, 0, 255, 0.5);
 }
 
 li:nth-of-type(3){
-    background-image: url("de.png");
+    background-image: url("slike/de.png");
     background-repeat: no-repeat;
     background-position: left center;
     background-color: rgba(255, 0, 0, 0.25);
 }
 
 li:nth-of-type(4){
-    background-image: url("es.png");
+    background-image: url("slike/es.png");
     background-repeat: no-repeat;
     background-position: left center;
     background-color: rgba(0, 0, 255, 0.5);
 }
 
 li:nth-of-type(5){
-    background-image: url("de.png");
+    background-image: url("slike/de.png");
     background-repeat: no-repeat;
     background-position: left center;
     background-color: rgba(255, 0, 0, 0.25);
@@ -47,7 +47,7 @@ li:nth-of-type(5){
 
 li:nth-of-type(6){
     margin-bottom: 0%;
-    background-image: url("en-GB.png");
+    background-image: url("slike/en-GB.png");
     background-repeat: no-repeat;
     background-position: left center;
     background-color: rgba(0, 255, 0, 0.75);
